<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VinID</string>
    <string name="app_intro_title">Tích điểm mọi giao dịch</string>
    <string name="app_intro_detail">Khi mua hàng tại VinMart và các dịch vụ Vingroup</string>
    <string name="phone_number_edit">Số điện thoại của bạn</string>
    <string name="langugge_vi">" Tiếng Việt"</string>
    <string name="language_en">Tiếng Anh</string>
    <string name="language_ja">Tiếng Nhật</string>
    <string name="phone_number_regis">Nhập số điện thoại</string>
    <string name="invitation_code">Bạn có mã giới thiệu?</string>
    <string name="app_policy">Bằng việc chọn Tiếp tục, bạn đã đồng ý với Điều khoản &amp; Điều kiện cùng Chính sách bảo mật và chia sẻ thông tin của VinID</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="invitation_code_title">Nhập mã giới thiệu</string>
    <string name="phone_number_warning">Xin vui lòng nhập số điện thoại chính xác</string>
    <!--OTP Activity    -->
    <string name="otp_confirm">Mã xác thực OTP</string>
    <string name="enter_otp_code">Điền OTP vừa được gửi đến số điện thoại </string>
    <string name="otp_code_hint">000 000</string>
    <string name="otp_code_warning">Mã OTP không hợp lệ</string>
    <string name="phone_number_change">Đổi số điện thoại</string>
    <string name="otp_send_again">Gửi lại mã OTP</string>
    <string name="otp_time_warning">Hết giờ! Vui lòng ấn "Gửi lại mã OTP"</string>
    <string name="pin_code_title">Nhập mã PIN</string>
    <string name="pin_code_content">Mã PIN dùng để đăng nhập, bảo mật và xác thực tài khoản</string>
    <string name="pin_code_forgot">Quên mã PIN</string>
    <string name="pin_code_warning">Mã PIN không hợp lệ</string>
    <!--Personal Information Activity    -->
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="personal_information_guide">Vui lòng hoàn tất thông tin cá nhân để thiết lập tài khoản</string>
    <string name="full_name">Họ &amp; tên</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="email_address">Email</string>
    <string name="done_button">Xong</string>
    <string name="date_picker_title">Chọn ngày</string>
    <string name="information_warning">Vui lòng nhập đầy đủ các thông tin</string>
    <!--Topic Service Activity    -->
    <string name="skip">Để sau</string>
    <string name="service_hint">Chọn dịch vụ bạn quan tâm, VinID sẽ gợi ý cho bạn chính xác hơn</string>
    <string name="food">Ăn uống</string>
    <string name="shopping">Mua sắm</string>
    <string name="Vincom">Vincom</string>
    <string name="Vinhomes">Vinhomes</string>
    <string name="save_and_spend_point">Tích, tiêu điểm</string>
    <string name="home_helper">Giúp việc</string>
    <string name="buy_ticket">Mua vé</string>
    <string name="payment_water_electric">Thanh toán điện nước</string>
    <string name="voucher">Voucher</string>
    <string name="begin_using">Bắt đầu sử dụng</string>
    <!--Home Page Activity    -->
    <string name="home_page">Trang chủ</string>
    <string name="my_wallet">Ví của tôi</string>
    <string name="inbox">Hộp thư</string>
    <string name="account">Tài khoản</string>
    <string name="hint_search">Tìm kiếm mọi thứ</string>
    <!--Bank Profile Connect    -->
    <!--    <string name="link_bank_account">-->
    <!--        <br>-->
    <!--            Liên kết ngân hàng, \n-->
    <!--        </br>-->
    <!--        <br>-->
    <!--            thanh toán dễ dàng-->
    <!--        </br>-->
    <!--    </string>-->
    <string name="link_now">Liên kết ngay ></string>
    <!--Grid Service-->
    <string name="grocery">Đi chợ</string>
    <string name="Vinmart">Vinmart</string>
    <string name="utilities">Tiện ích</string>
    <string name="All_Of_Services">Xem tất cả dịch vụ</string>
    <!--Inbox    -->
    <string name="notice">Thông báo</string>
    <string name="notice_content">Cập nhật thông tin giao dịch, hoàn tiền</string>
    <string name="promotion">Khuyến mại</string>
    <string name="promotion_content">Đừng bỏ lỡ ưu đãi siêu hấp dẫn từ VinID</string>
    <string name="news">Tin tức</string>
    <string name="new_content">Cập nhật các tính năng mới nhất của VinID</string>
    <string name="create_new_message"> + Tạo tin nhắn mới</string>
    <!-- My Wallet   -->
    <string name="wallet_recommend">
        <br>Ví của bạn chưa có tiền,\n</br>
        <br>liên kết ngân hàng\n</br>
        <br>và nạp ngay</br>
    </string>
    <string name="group_fund">Quỹ nhóm</string>
    <string name="create_new_group_fund">Tạo quỹ nhóm mới</string>
    <string name="travel">Du lịch</string>
    <string name="subsistence">Sinh hoạt phí</string>
    <string name="Electronic_Wallet_Title">Ví điện tử giúp gì cho bạn?</string>
    <string name="Electronic_Wallet_Usefull">Thanh toán mọi giao dịch trên VinID và tại các địa
        điểm chấp nhận ví như: Vinmart, Vinmart+ …</string>
    <string name="My_Wallet_Footer">Powered by VinID Pay JSC</string>
    <!--Profile    -->
    <string name="profile">Tài khoản</string>
    <string name="point">Điểm tích luỹ</string>
    <string name="my_pocket">Túi đồ</string>
    <string name="address_book">Sổ địa chỉ</string>
    <string name="transaction_history">Lịch sử giao dịch</string>
    <string name="contact_book">Danh bạ</string>
    <string name="redeemed_gift">Quà tặng</string>
    <string name="setting">Cài đặt</string>
    <string name="password_security">Mật khẩu &amp; Bảo mật</string>
    <string name="help_center">Trung tâm trợ giúp</string>
    <string name="share_with_friends">Giới thiệu bạn bè</string>
    <string name="share_now">Chia sẻ ngay</string>
    <string name="profile_footer_title">Đánh giá của bạn</string>
    <string name="profile_footer_content">
        <br>Sẽ thật tuyệt vời nếu VinID \n </br>
        <br>nhận được đánh giá của bạn \n </br>
        <br>nhằm nâng cao chất lượng dịch vụ </br></string>
    <string name="version_name">Version: 94.6 (9500025)</string>
    <string name="how_good_are_we">Đánh giá chất lượng dịch vụ</string>
    <string name="your_feedback">Phản hồi của bạn</string>
    <string name="feedback_hint">Vui lòng để lại gợi ý của bạn ở đây</string>
    <string name="send">Gửi</string>
    <string name="one_star">Không tốt</string>
    <string name="two_star">Bình thường</string>
    <string name="three_star">Tốt</string>
    <string name="four_star">Rất tốt</string>
    <string name="five_star">Tuyệt vời</string>
    <string name="thanks_for_rating">Cảm ơn bạn đã đánh giá</string>
    <string name="Code_Sacnner">Quét mã</string>
    <string name="Using_Card">Dùng thẻ</string>
    <string name="Payment">Thanh toán</string>
    <string name="Point">Điểm tích luỹ</string>
</resources>