<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity_Style"
    tools:context=".PersonalInformation">
    <LinearLayout
        style="@style/Sub_View2"
        android:orientation="vertical">
        <TextView
            style="@style/TextView_Title"
            android:text="@string/personal_information" />
        <TextView
            style="@style/Normal_TextView"
            android:text="@string/personal_information_guide"/>
        <EditText
            android:inputType="textPersonName"
            style="@style/Normal_EditText"
            android:hint="@string/full_name"/>
        <FrameLayout
            android:weightSum="10"
            style="@style/Sub_View4">
            <EditText
                android:layout_weight="9"
                style="@style/Normal_EditText"
                android:hint="@string/date_of_birth" />
            <ImageView
                style="@style/Sub_View1"
                android:layout_marginRight="@dimen/dimen10"
                android:src="@drawable/icon_callendar"
                android:layout_gravity="right|center_vertical" />
        </FrameLayout>

        <EditText
            android:inputType="textEmailAddress"
            style="@style/Normal_EditText"
            android:hint="@string/email_address"/>
        <TextView
            style="@style/Linked_TextView"
            android:text="@string/invitation_code"/>
    </LinearLayout>
    <Button
        style="@style/btn_next"
        android:text="@string/btn_continue"/>
</RelativeLayout>