<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Activity_Style"
    tools:context="Activities.TopicService"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_skip_choose_topic"
        style="@style/Linked_TextView"
        android:layout_alignParentRight="true"
        android:text="@string/skip"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/img_topic_logo"
        style="@style/Sub_View4"
        android:src="@drawable/topic_logo"/>
    <TextView
        android:id="@+id/tv_service_hint"
        android:layout_below="@+id/img_topic_logo"
        style="@style/TextView_Hint"
        android:text="@string/service_hint"/>
    <LinearLayout
        android:id="@+id/linear_topic1"
        android:layout_below="@+id/tv_service_hint"
        style="@style/Sub_View4"
        android:orientation="horizontal">
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/eat_and_drink"
            android:textOff="@string/eat_and_drink"
            android:background="@drawable/toggle_button"/>
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/shopping"
            android:textOff="@string/shopping"
            android:background="@drawable/toggle_button"/>
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/Vincom"
            android:textOff="@string/Vincom"
            android:background="@drawable/toggle_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_topic2"
        style="@style/Sub_View4"
        android:orientation="horizontal"
        android:layout_below="@+id/linear_topic1">
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/Vinhomes"
            android:textOff="@string/Vinhomes"
            android:background="@drawable/toggle_button"/>
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/save_and_spend_point"
            android:textOff="@string/save_and_spend_point"
            android:background="@drawable/toggle_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_topic3"
        android:layout_below="@+id/linear_topic2"
        style="@style/Sub_View4"
        android:orientation="horizontal">
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/home_helper"
            android:textOff="@string/home_helper"
            android:background="@drawable/toggle_button"/>
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/buy_ticket"
            android:textOff="@string/buy_ticket"
            android:background="@drawable/toggle_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/linear_topic3"
        android:orientation="horizontal"
        style="@style/Sub_View4">
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/payment_water_electric"
            android:textOff="@string/payment_water_electric"
            android:background="@drawable/toggle_button"/>
        <ToggleButton
            style="@style/btn_choose_topic"
            android:textOn="@string/voucher"
            android:textOff="@string/voucher"
            android:background="@drawable/toggle_button"/>
    </LinearLayout>
    <Button
        style="@style/btn_next"
        android:text="@string/begin_using"/>
</RelativeLayout>