<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/home_page" />
    <item android:id="@+id/nav_my_wallet"
        android:icon="@drawable/icon_wallet"
        android:title="@string/my_wallet" />
    <item android:id="@+id/qr_code_scanner"
        android:title=" "
        android:icon="@drawable/icon_qr_code_scanner"
        android:iconTint="@color/bottom_navigation_text_selected"
        tools:targetApi="o" />
    <item android:id="@+id/nav_inbox"
        android:icon="@drawable/icon_inbox"
        android:title="@string/inbox" />
    <item android:id="@+id/nav_account"
        android:icon="@drawable/icon_account"
        android:title="@string/account" />
</menu>