<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edtphone_number"
    style="@style/Activity_Style"
    android:orientation="vertical"
    tools:context="RegisterActivities.MainActivity">
    <LinearLayout
        android:id="@+id/languagebtn"
        style="@style/Sub_View4"
        android:orientation="horizontal"
        android:weightSum="4.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_weight="0.5"
            style="@style/Sub_View1"
            android:src="@drawable/vn_flag"/>
        <TextView
            android:gravity="center"
            android:id="@+id/btnVietnamese"
            style="@style/Sub_View3"
            android:layout_weight="1"
            android:text="@string/langugge_vi"
            android:textColor="@color/language_text_color"
            android:textSize="@dimen/text_size16" />
        <ImageView
            android:layout_weight="0.5"
            style="@style/Sub_View1"
            android:src="@drawable/en_flag"/>
        <TextView
            android:id="@+id/btnEnglish"
            style="@style/Sub_View3"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/language_en"
            android:textColor="@color/language_text_color"
            android:textSize="@dimen/text_size16" />
        <ImageView
            android:layout_weight="0.5"
            style="@style/Sub_View1"
            android:src="@drawable/jp_flag"/>
        <TextView
            android:id="@+id/btnJapanese"
            style="@style/Sub_View3"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/language_ja"
            android:textColor="@color/language_text_color"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languagebtn">
        <TextView
            android:id="@+id/tvintroduce_title"
            style="@style/TextView_Title"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_weight="1"
            android:text="@string/app_intro_title"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/tvintroduce_detail"
            style="@style/Sub_View4"
            android:gravity="center_horizontal"
            android:text="@string/app_intro_detail"
            android:textSize="@dimen/text_size22" />
        <ImageView
            android:layout_weight="2"
            style="@style/Sub_View4"
            android:src="@drawable/pay" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/tvphonenumber"
            style="@style/TextView_Title"
            android:text="@string/phone_number_regis" />
        <EditText
            android:focusableInTouchMode="false"
            android:onClick="goToRegisForm"
            android:layout_weight="1"
            android:id="@+id/phonenumber"
            style="@style/Normal_EditText"
            android:hint="@string/phone_number_edit"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>