<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Sub_View2"
    tools:context="HomeActivities.MyWallet">
    <LinearLayout
        android:id="@+id/banner_my_wallet_layout"
        android:orientation="vertical"
        style="@style/Sub_View1"
        android:background="#DA233E">
        <TextView
            android:id="@+id/tv_my_wallet_title"
            style="@style/My_Wallet_Title"
            android:text="@string/my_wallet"/>
        <RelativeLayout
            style="@style/Banner_My_Wallet_Style"
            android:layout_marginTop="@dimen/dimen10">
            <TextView
                android:id="@+id/tv_wallet_recommend"
                style="@style/TextView_Associate_Bank_Account"
                android:text="@string/wallet_recommend"/>
            <TextView
                android:layout_below="@+id/tv_wallet_recommend"
                style="@style/Linked_TextView"
                android:text="@string/link_now"
                android:layout_margin="@dimen/dimen10"/>
            <ImageView
                style="@style/Image_Banner"
                android:src="@drawable/icon_banner_wallet" />
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        style="@style/Sub_View2.ScrollView_Style"
        android:layout_below="@id/banner_my_wallet_layout">
        <LinearLayout
            android:id="@+id/My_Wallet_Services"
            android:orientation="vertical"
            style="@style/Sub_View4">
            <TextView
                style="@style/My_Wallet_Subtitle"
                android:text="@string/group_fund"/>
            <GridLayout
                style="@style/Sub_View1.GridLayout_My_Wallet_Style">
                <androidx.cardview.widget.CardView
                    style="@style/Sub_View1.CardView_My_Wallet_Services">
                    <LinearLayout
                        style="@style/Sub_View4.GridLayout_My_Wallet_Item">
                        <ImageView
                            style="@style/Sub_View1"
                            android:src="@drawable/create_new_group_fund"/>
                        <TextView
                            style="@style/Sub_View1.GridLayout_My_Wallet_Item_TextView"
                            android:text="@string/create_new_group_fund" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    style="@style/Sub_View1.CardView_My_Wallet_Services">
                    <LinearLayout
                        style="@style/Sub_View4.GridLayout_My_Wallet_Item">
                        <ImageView
                            style="@style/Sub_View1"
                            android:src="@drawable/subsistence"/>
                        <TextView
                            style="@style/Sub_View1.GridLayout_My_Wallet_Item_TextView"
                            android:text="@string/subsistence"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    style="@style/Sub_View1.CardView_My_Wallet_Services">
                    <LinearLayout
                        style="@style/Sub_View4.GridLayout_My_Wallet_Item">
                        <ImageView
                            style="@style/Sub_View1"
                            android:src="@drawable/travel"/>
                        <TextView
                            style="@style/Sub_View1.GridLayout_My_Wallet_Item_TextView"
                            android:text="@string/travel"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    style="@style/Sub_View1.CardView_My_Wallet_Services">
                    <LinearLayout
                        style="@style/Sub_View4.GridLayout_My_Wallet_Item">
                        <ImageView
                            style="@style/Sub_View1"
                            android:src="@drawable/eating_my_wallet"/>
                        <TextView
                            style="@style/Sub_View1.GridLayout_My_Wallet_Item_TextView"
                            android:text="@string/food"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
            <androidx.cardview.widget.CardView
                style="@style/Sub_View2.CardView_My_Wallet_Footer">
                <LinearLayout
                    android:orientation="vertical"
                    style="@style/Sub_View1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/my_wallet_footer"/>
                    <TextView
                        style="@style/Sub_View2.Electronic_Wallet_Title"
                        android:text="@string/Electronic_Wallet_Title"/>
                    <TextView
                        style="@style/Sub_View2.Electronic_Wallet_Content"
                        android:text="@string/Electronic_Wallet_Usefull" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                style="@style/Sub_View1.TextView_Copyright" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        style="@style/Sub_View4.Bottom_Navigation_Bar"
        android:id="@+id/bottom_navigation_bar">
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>